--- a/App/index.html
+++ b/App/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Habibi&display=swap" rel="stylesheet">
-    <title>Test</title>
-</head>
-<body>
-        <nav class="navbar stretch">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Habibi&display=swap" rel="stylesheet">
+        <title>Test</title>
+    </head>
+    <body>
+        <nav class="navbar stretch fs-300">
             <span>
-                <a href="#">Gotham Regency Inn</a>
+                <a href="#" class="bg-accent-brown text-white-200">Gotham Regency Inn</a>
             </span>
             <span class="space-between">
                 <a href="#">Find</a>
@@ -22,7 +22,5 @@
                 <a href="#">Profile</a>
             </span>
         </nav>
-        i am bACK
-        param is batman
-</body>
+    </body>
 </html>
