updated general stylesheet

--- a/App/index.html
+++ b/App/index.html
@@ -22,5 +22,7 @@
                 <a href="#">Profile</a>
             </span>
         </nav>
+        <p class="pd-300">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur atque odio esse officiis? Magnam tempora eum animi vero nesciunt! Possimus unde quam sit ipsa doloribus vero at reiciendis odit, sapiente qui non quia officia deleniti dignissimos. Alias voluptates, itaque obcaecati, molestias odit maiores eveniet sunt totam dicta sed iste repudiandae?</p>
+        <button class="pd-blk-300 | pd-inl-200 | text-white-200 | bg-gray-200">Lorem, ipsum.</button>
     </body>
 </html>
