updated generalised stylesheet

--- a/App/index.html
+++ b/App/index.html
@@ -10,11 +10,11 @@
         <title>Test</title>
     </head>
     <body>
-        <nav class="navbar stretch fs-300">
-            <span>
+        <nav class="navbar stretch fs-300 fx-row fx-space-between">
+            <span class="pd-300">
                 <a href="#" class="bg-accent-brown text-white-200">Gotham Regency Inn</a>
             </span>
-            <span class="space-between">
+            <span class="pd-300">
                 <a href="#">Find</a>
                 <a href="#">Vacation</a>
                 <a href="#">Our Brands</a>
@@ -22,7 +22,7 @@
                 <a href="#">Profile</a>
             </span>
         </nav>
-        <p class="pd-300">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur atque odio esse officiis? Magnam tempora eum animi vero nesciunt! Possimus unde quam sit ipsa doloribus vero at reiciendis odit, sapiente qui non quia officia deleniti dignissimos. Alias voluptates, itaque obcaecati, molestias odit maiores eveniet sunt totam dicta sed iste repudiandae?</p>
-        <button class="pd-blk-300 | pd-inl-200 | text-white-200 | bg-gray-200">Lorem, ipsum.</button>
+        <p class="fx-centre">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur atque odio esse officiis? Magnam tempora eum animi vero nesciunt! Possimus unde quam sit ipsa doloribus vero at reiciendis odit, sapiente qui non quia officia deleniti dignissimos. Alias voluptates, itaque obcaecati, molestias odit maiores eveniet sunt totam dicta sed iste repudiandae?</p>
+        <button class="pd-blk-100 | pd-inl-300 | text-white-200 | bg-gray-200 | brd-rad-300">Reserve</button>
     </body>
 </html>
