--- a/App/index.html
+++ b/App/index.html
@@ -15,7 +15,7 @@
                 <a href="#" class="bg-accent-brown text-white-200">Gotham Regency Inn</a>
             </span>
             <span class="pd-300">
-                <a href="#">Find</a>
+                <a href="#" class="text-black-200">Find</a>
                 <a href="#">Vacation</a>
                 <a href="#">Our Brands</a>
                 <a href="#">About Us</a>
